Mon Jul  5 16:53:23 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htdig/htdig.cc (main): Insert '*' instead of username/password
	combination to hide credentials in process accounting.

Sat Jul  3 17:35:52 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htdig/Transport.h(ConnectionWrite): Return value from
	Connection::write call.

	* htdig/URLRef.h, htdig/URLRef.cc: Cleanup and made hopcount
	default consistent with 7/3 change to DocumentRef.cc

	* htdig/Server.h, htdig/Server.cc, htdig/Retriever.cc: Cleanup and
	fixes to match URLRef calling interface.

Sat Jul  3 16:37:29 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htdig/HTML.cc (do_tag): Fix <meta> robots parsing to allow
	multiple directives to work correctly. Fixes PR#578, as provided
	by Chris Liddiard <c.h.liddiard@qmw.ac.uk>.

Sat Jul  3 00:47:51 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htdig/Makefile.in: Remove old SGMLEntities code.

Sat Jul  3 00:26:55 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htcommon/DocumentRef.cc (Clear): Change default value of
	docHopCount to 0 to fix several hopcount bugs.

	* htdig/Transport.h, htdig/Transport.cc: Changes to support URL
	referers as well as authentication credentials.

	* htdig/HtHTTP.h, htdig/HtHTTP.cc(SetCredentials): Implement HTTP
	Basic Authentication credentials.
	(SetRequestCommand): Use Referer and Authentication headers if
	supplied.

Sun Jun 30 11:26:00 1999  Gabriele Bartolini <g.bartol@comune.prato.it>

	* htdig/Transport.h: Inserted the methods declarations regarding
	the connection management. The code has been moved out from the
	HtHTTP.h code. Also moved here the static variable 'debug'.

	* htdig/Transport.cc: Definition of the connection management code.
	The code has been moved out from the HtHTTP.cc code.

	* htdig/HtHTTP.h: Eliminated the connection management code and the
	static variable 'debug'. Inserted the 'modification_time_is_now' as