@@ -1,3 +1,7 @@
+Thu Jul  8 21:28:44 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>
+
+	* htdig/HTML.cc (do_tag): Add support for parsing <LINK> tags.
+
 Mon Jul  5 16:53:23 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>
 
 	* htdig/htdig.cc (main): Insert '*' instead of username/password
